--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -270,9 +270,9 @@ Running migration: 2_deploy_contracts.js
   Replacing TokenGrant...
   ... 0xf3d4a78110ddd2003bd4c47bb59a0165e8468b3f38777131731d0829a5a3cfbf
   TokenGrant: 0x24e006907b85482b86c335c0c8e15c9ca49e6800
-  Replacing KeepRandomBeaconImplV1...
+  Replacing KeepRandomBeaconFrontendImplV1...
   ... 0x03a560288292005f2181fe561461aa70b521741349641c31525f64c1482caf25
-  KeepRandomBeaconImplV1: 0x3179d9c794e597d6316736189bf040b74a2f1dd7
+  KeepRandomBeaconFrontendImplV1: 0x3179d9c794e597d6316736189bf040b74a2f1dd7
   Replacing KeepRandomBeacon...
   ... 0x9facb5fe566862e67e50d6ad0fc622f717ee5cb795c7044ba9ad2ff32f9faa70
   KeepRandomBeacon: 0x15045ff30d6327345cc052cc4b8c28dbe974a74b
