--- a/docs/rfc/rfc-8-continuous-delivery.adoc
+++ b/docs/rfc/rfc-8-continuous-delivery.adoc
@@ -198,14 +198,15 @@ To reiterate:  The implementation will aim to automate
 `Ethereum Contract Deployment` and `keep-client Configuration`.
 `keep-client service deployment` is already automated via Keel.
 
-==== Part 1: Contract Migration and ConfigMap Updates
+==== Part 1: Contract Migration and Consul Update
 
 Either a new workflow or new jobs to existing workflow will be added to the
 `keep-core` circle config.  Before image publish on master merge Circle
 will run this workflow/job to trigger a script that will:
 
-- migrate all contracts if any are changed
-- update keep-client ConfigMaps with new contract addresses
+- migrate all contracts
+
+- Update Consul with fresh contract addresses
 
 - Here we must implement an access point for Circle into the private Kubernetes
   cluster.  We can do this with the `gcp_push_deploy` Terraform module.
@@ -213,8 +214,7 @@ will run this workflow/job to trigger a script that will:
 ==== Sample keep-client Service Consul Configuration
 When operating in a Kubernetes cluster we can query client configurations from
 a Consul host. To provision configurations they are first loaded into the key-
-value store. The keep-client is then instructed via the `consulHost` commandline
-parameter to query Consul for its configuration.
+value store.
 
 To fully automate deployment of new code on merge to master we need to auto-generate
 a configuration for each test keep-client and upload it to Consul.
@@ -235,23 +235,33 @@ a configuration for each test keep-client and upload it to Consul.
   consul kv get libp2p
 ```
 
-==== Part 2: ETH Account Preparation
+==== Part 2: keep-client Preparation
 
 On each keep-client Kubernetes deployment we'll run an `InitContainer` that does
 the following:
 
 - unlock ETH account
 - stake ETH account
+- query consul and fetch updated keep-client configuration data
+- write configuration file to a persistent volume
 
-The `InitContainer` will operate exclusively on the ETH account assigned to the
+The `InitContainer` will operate exclusively on the ETH account and assigned to the
 `keep-client` being deployed.  If there are 100 `keep-client` Kubernetes
 deployments, there would be 100 `InitContainer` instances unlocking and staking
 for each of the assigned ETH accounts.  This is infinitely scalable (system
 resources aside) and reduces `unlock + stake` time to a ceiling of the time it
 takes to operate on a single account.
 
+The `InitContainer` will query consul and fetch updated configuration values since
+the last deployment.  The updated configuration values will be fed into a complete
+`keep-client` configuration template and stored in a Kubernetes persistent volume.
+This volume will be mounted to the `keep-client` deployment where the config can
+be passed via command line argument on service start.  The benefit to this approach
+is that we can maintain a *single set of keep configurations on consul*.  This will
+reduce up-front configuration time via Circle.
+
 For now we're going to bake a custom image for the init container with the script
-for doing unlock and stake.  This will be checked into the
+for doing unlock and stake / Consul configuration.  This will be checked into the
 `keep-core/infrastructure/kube` directory.
 
 
@@ -261,6 +271,7 @@ for doing unlock and stake.  This will be checked into the
 - It requires Keel
 - It require CircleCI
 - It requires Truffle
+- It requires Consul
 - All contracts are migrated, can't be selective
 - No rollback mechanism if things go sideways
 - No order to which type of keep-client gets deployed first (bootstrap vs standard)
@@ -281,6 +292,7 @@ Open
 [bibliography]
 == Related Links
 
+- https://www.flowdock.com/app/cardforcoin/tech/threads/oa1X0y9kQqUBwxd4gwgdu7Rs5O2[Consul discussion]
 - https://www.flowdock.com/app/cardforcoin/keep/threads/zzxutnh8USazp5U8cC6lNIDu7gI[Contract Migration Automation]
 - Various Github Issues discussing one or more of the 3 deployment parts outlined here:
   - https://github.com/keep-network/keep-core/issues/721[CircleCI Config Work]
