--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -264,7 +264,7 @@ Running migration: 2_deploy_contracts.js
   Replacing StakingProxy...
   ... 0x8ae70295914339ca77032f12b86db52d4ad3bdf42cf53d61e091f804b577fea1
   StakingProxy: 0xaaf62d144641daa15d9208552360a27b2edf0c25
-  Replacing TokenStaking...
+  Replacing Staking...
   ... 0x61af5445af82db5b8da75a8e8fcd272c7c2a542a81b372662cde9b98d37a0cb0
   TokenStaking: 0xce812232c495262ff1423fa68b237177eda3af4c
   Replacing TokenGrant...
