added node connection delay variables as input

--- a/simulations/Mesa Simulations/Mesa_ABM_of_Random_Beacon.ipynb
+++ b/simulations/Mesa Simulations/Mesa_ABM_of_Random_Beacon.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Group Parameters\n",
+    "# Group & SignatureParameters\n",
     "group_size = 10 # number of virtual stakers in a group - nodes to stakers is a 1-many relationship\n",
     "nodes = 10 # total number of nodes (assume 1 node = 1 staker)\n",
     "active_group_threshold =10 # number of active groups to bootstrap at start\n",
@@ -80,7 +80,9 @@
     "\n",
     "#Node parameters\n",
     "node_failure_percent = 10 # % of times nodes fail and have to reconnect\n",
-    "node_death_percent = 5 # % of time nodes fail and do not reconnect\n"
+    "node_death_percent = 5 # % of time nodes fail and do not reconnect\n",
+    "node_connection_delay = 5 # max delay for a node to connect or reconnect after failure\n",
+    "node_mainloop_connection_delay = 5 # max delay for a node to fork or refork mainloop after failure\n"
    ]
   },
   {
@@ -146,7 +148,9 @@
     "                                  node_failure_percent, \n",
     "                                  node_death_percent, \n",
     "                                  signature_delay,\n",
-    "                                  min_nodes\n",
+    "                                  min_nodes,\n",
+    "                                  node_connection_delay,\n",
+    "                                  node_mainloop_connection_delay\n",
     "                                 )"
    ]
   },
